--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "react-reddit-wallpapers",
+  "name": "react-pexels-wallpapers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "autoprefixer": "^9.8.0",
+    "axios": "^0.19.2",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "tailwindcss": "^1.4.6",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build:tailwind": "postcss src/tailwind/tailwind.css -o src/tailwind/tailwind.generated.css",
+    "watch:tailwind": "postcss -w src/tailwind/tailwind.css -o src/tailwind/tailwind.generated.css",
+    "dev": "run-p watch:tailwind dev:react",
+    "dev:react": "react-scripts start",
+    "prebuild": "npm run build:tailwind",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
