--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev": "run-p watch:tailwind dev:react",
     "dev:react": "react-scripts start",
     "prebuild": "npm run build:tailwind",
-    "build": "react-scripts build",
+    "build": "NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
