--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-pexels-wallpapers",
   "version": "0.1.0",
+  "license": "MIT",
   "dependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -20,8 +21,8 @@
     "watch:tailwind": "postcss -w src/tailwind/tailwind.css -o src/tailwind/tailwind.generated.css",
     "dev": "run-p watch:tailwind dev:react",
     "dev:react": "react-scripts start",
-    "prebuild": "npm run build:tailwind",
-    "build": "NODE_ENV=production react-scripts build",
+    "prebuild": "NODE_ENV=production yarn build:tailwind",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
