--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-pexels-wallpapers",
   "version": "0.1.0",
+  "homepage": "https://gomorizsolt.github.io/react-pexels-wallpapers/",
   "license": "MIT",
   "dependencies": {
     "@types/node": "^12.0.0",
@@ -21,7 +22,7 @@
     "watch:tailwind": "postcss -w src/tailwind/tailwind.css -o src/tailwind/tailwind.generated.css",
     "dev": "run-p watch:tailwind dev:react",
     "dev:react": "react-scripts start",
-    "prebuild": "NODE_ENV=production yarn build:tailwind",
+    "prebuild": "yarn build:tailwind",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
